# FI-semantic

./: app.py  client_tags_results.xlsx  client_tags_results_csv.csv  config.yaml  fetch_tags.py  find_new_tags.py  pipeline.py  pyproject.toml  requirements.txt
