[project]
name = "fi-semantic"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonn-Leon",email = "skovoroda.vitalik@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openai (>=1.79.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
